# FG

./: .gitignore  Lab2_documentation  README.md  arduino_comm.py  ball_tracking.py  camerav2_410x308.yaml  compute_vel.py  compute_vel.py.save  frames.gv
arduino_motorBL/: arduino_motorBL.ino
arduino_motorBR/: arduino_motorBR.ino
arduino_motorFL/: arduino_motorFL.ino
arduino_motorFR/: arduino_motorFR.ino
arduino_motors/: arduino_motors.ino
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/football_game/: ReachGoal.h  ReachGoalRequest.h  ReachGoalResponse.h
devel/share/common-lisp/ros/football_game/srv/: ReachGoal.lisp  _package.lisp  _package_ReachGoal.lisp  football_game-srv.asd
devel/share/football_game/cmake/: football_game-msg-extras.cmake  football_game-msg-paths.cmake  football_gameConfig.cmake
devel/share/gennodejs/ros/football_game/srv/: ReachGoal.js  _index.js
devel/share/roseus/ros/football_game/: manifest.l
devel/share/roseus/ros/football_game/srv/: ReachGoal.l
single_motors/arduino_motorBL/: arduino_motorBL.ino
single_motors/arduino_motorBR/: arduino_motorBR.ino
single_motors/arduino_motorFL/: arduino_motorFL.ino
single_motors/arduino_motorFR/: arduino_motorFR.ino
src/football_game/: CMakeLists.txt  package.xml
src/football_game/launch/: gazebo.launch
src/football_game/src/: compute_goal.cpp  reach_goal.cpp  tf_broadcaster.cpp
src/football_game/srv/: ReachGoal.srv
src/football_game/urdf/: robot.gazebo  robot.xacro
src/football_game/worlds/: laser_world.world
